--- a/ielts.html
+++ b/ielts.html
@@ -4,16 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Review</title>
+    <title>雅思7600词</title>
     <script>
         // Function to fetch and render the JSON word list
         async function loadWords() {
             const url = 'ielts.json'; // Replace with your JSON file URL
             try {
                 const response = await fetch(url);
-                const wordList = await response.json();
+                const rawWordList = await response.json();
                 const container = document.getElementById('wordContainer');
 
+                const getIsRandom = () => {
+                    // 获取当前页面的 URL 参数
+                    const params = new URLSearchParams(window.location.search);
+                    const isLpParam = params.get('random');
+                    // 检查 is_lp 参数是否为 '1'
+                    if (isLpParam === '1') {
+                        return 1
+                    }
+                    return 0
+                }
+
+                const rerangeWordList = (wordList) => {
+                    const isRandom = getIsRandom()
+                    if (isRandom == 1) {
+                        return wordList.sort(() => Math.random() - 0.5)
+                    }
+                    return wordList
+                }
+                const wordList = rerangeWordList(rawWordList)
                 wordList.forEach((word) => {
                     // Create the word info box
                     const wordBox = document.createElement('div');
@@ -107,7 +126,7 @@
 </head>
 
 <body>
-    <h1>Word Review</h1>
+    <h1>雅思7600词</h1>
     <div id="wordContainer">
         <!-- Words will be dynamically loaded here -->
     </div>
