--- a/gre.html
+++ b/gre.html
@@ -126,7 +126,7 @@
 </head>
 
 <body>
-    <h1>雅思7600词</h1>
+    <h1>GRE高频词汇</h1>
     <div id="wordContainer">
         <!-- Words will be dynamically loaded here -->
     </div>
